changing schools profile

--- a/views/company/companies.ejs
+++ b/views/company/companies.ejs
@@ -12,12 +12,12 @@
 			<div class="ul_links">
 	            <ul>
 	                <li><a href="/">Home</a></li> |
-	                <li><a href="/companies">All Companies</a></li>
+	                <li><a href="/companies">All Schools</a></li>
 	            </ul>
 	        </div>
 
             <div class="bodyDiv">
-				<h4 style="">Companies</h4>
+				<h4 style="">Schools</h4>
 				
 				<% arrayAverage = function(arr) {
                     return _.reduce(arr, (num1, num2) => {
