--- a/views/company/employees.ejs
+++ b/views/company/employees.ejs
@@ -10,13 +10,13 @@
 			<div class="ul_links">
 	            <ul>
 	                <li><a href="/">Home</a></li> |
-	                <li><a href="/companies">Company</a></li> |
+	                <li><a href="/companies">School</a></li> |
 	                <li><a href="#">Employees</a></li>
 	            </ul>
 	        </div>
 
             <div class="bodyDiv">
-				<h4 style="">Company Employees</h4>
+				<h4 style ="">School Employees</h4>
             
                 <table class="table table-bordered">
                    <thead>
