--- a/views/company/leaderboard.ejs
+++ b/views/company/leaderboard.ejs
@@ -12,7 +12,7 @@
 			<div class="ul_links">
 	            <ul>
 	                <li><a href="/">Home</a></li> |
-	                <li><a href="/companies">All Companies</a></li> |
+	                <li><a href="/companies">All Schools</a></li> |
 	                <li><a href="#">Leaderbaord</a></li>
 	            </ul>
 	        </div>
