--- a/views/company/search.ejs
+++ b/views/company/search.ejs
@@ -11,13 +11,13 @@
 			<div class="ul_links">
 	            <ul>
 	                <li><a href="/">Home</a></li> |
-	                <li><a href="/companies">Companies</a></li> |
-	                <li><a href="#">Find a Company</a></li>
+	                <li><a href="/companies">Schools</a></li> |
+	                <li><a href="#">Find a School</a></li>
 	            </ul>
 	        </div>
 
             <div class="bodyDiv">
-				<h4 style="">Find a Company</h4>
+				<h4 style="">Find a School</h4>
 
 	            <form action="" method="post">
 	                <div class="form-group ">
