--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,17 @@
 	                <li><a href="/">Home</a></li> |
 	                <li><a href="/companies">All Companies</a></li>
 	            </ul>
-	        </div>
+            </div>
+            
+            <div class="container">
+                <div class="jumbotron">
+                    <h1 class="display-3 text-center"><b>Looking For The Best Schools?</b></h1>
+                    <hr class="my-4">
+                    <p class="text-center">Search and Review the Best Schools For your Child</p>
+                    
+    
+                </div>
+            </div>
            
            <div class="bodyDiv">
 				<h4 style="">Companies</h4>
