--- a/views/company/company-profile.ejs
+++ b/views/company/company-profile.ejs
@@ -11,13 +11,13 @@
 			<div class="ul_links">
 	            <ul>
 	                <li><a href="/">Home</a></li> |
-	                <li><a href="/companies">Company</a></li> |
-	                <li><a href="#">Company Profile</a></li>
+	                <li><a href="/companies">School</a></li> |
+	                <li><a href="#">School Profile</a></li>
 	            </ul>
 	        </div>
 
             <div class="bodyDiv">
-				<h4 style="">Company Profile</h4>
+				<h4 style="">School Profile</h4>
 
 	            <div class="row mainDiv">
 					<div class="innerDiv">
@@ -30,9 +30,9 @@
 								http://<%= data.website %></a>
 							</i><br><br>
 							
-							<a href="/review/<%= data._id %>" class="btn btn-success">Rate this company</a><br><br>
+							<a href="/review/<%= data._id %>" class="btn btn-success">Rate this School/a><br><br>
 
-							<a href="/<%= data.name %>/employees" class="btn btn-info">View Company Employees</a><br><br>
+							<a href="/<%= data.name %>/employees" class="btn btn-info">View School Employees</a><br><br>
 
                             
                             
