--- a/views/company/company.ejs
+++ b/views/company/company.ejs
@@ -14,8 +14,8 @@
             <div class="ul_links">
                 <ul>
                     <li><a href="/home">Home</a></li> |
-                    <li><a href="">Company</a></li> |
-                    <li><a href="#">Register Company</a></li>
+                    <li><a href="">School</a></li> |
+                    <li><a href="#">Register School</a></li>
                 </ul>
             </div>
             <br>
@@ -37,7 +37,7 @@
                 <form method="POST" action="/company/create">
 
                     <div class="form-group ">
-                        <label for="">Company Name</label>
+                        <label for="">School Name</label>
                         <span id="errorMsg1"></span>
                         <input id="name" class="form-control" name="name" type="text" style="margin-bottom:20px;">
                     </div>
