--- a/views/company/register-employee.ejs
+++ b/views/company/register-employee.ejs
@@ -11,7 +11,7 @@
 			<div class="ul_links">
 	            <ul>
 	                <li><a href="/">Home</a></li> |
-	                <li><a href="/companies">Company</a></li> |
+	                <li><a href="/companies">School</a></li> |
 	                <li><a href="#">Register Employee</a></li>
 	            </ul>
 	        </div>
@@ -20,7 +20,7 @@
 				<h4 style="">Register Employee</h4>
 
 	            <div class="form-group">
-	                <label for="">Company</label><br>
+	                <label for="">School</label><br>
 	                <label><%= data.name %></label>
 	            </div>
 
