--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,24 +17,24 @@
             <div class="row">
                 <div class="col-md-4" id="colDesc">
                     <div class="info-icon"><i class="fa fa-sign-in"></i></div>
-                    <h3 class="text-center">Add Company</h3>
-                    <p class="text-center">Add company profile. Registered employees can give ratings and reviews.</p>
+                    <h3 class="text-center">Add School</h3>
+                    <p class="text-center">Register your schools let others find you, rate and review your profile</p>
 
                     <a href="/company/create" class="btn btn-block btn-primary link_btn">Add</a>
                 </div>
 
                 <div class="col-md-4" id="colDesc">
                     <div class="info-icon"><i class="fa fa-search"></i></div>
-                    <h3 class="text-center">Search</h3>
-                    <p class="text-center">Search through our business catalogue and find your best partner.</p>
+                    <h3 class="text-center">Search For Schools</h3>
+                    <p class="text-center">Search and find your favourite schools</p>
 
                     <a href="/company/search" class="btn btn-block btn-primary link_btn">Search</a>
                 </div>
 
                 <div class="col-md-4" id="colDesc">
                     <div class="info-icon"><i class="fa fa-star"></i></div>
-                    <h3 class="text-center">Rate</h3>
-                    <p class="text-center">Rate and review other companies and get your company reviewed as well.</p>
+                    <h3 class="text-center">Rate and Review</h3>
+                    <p class="text-center">Make your favorite schools popular by upvoting them</p>
 
                     <a href="/companies" class="btn btn-block btn-primary link_btn">Rate</a>
                 </div>
