changing schools profile

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,9 +15,9 @@
             </div>
             
             <li><a href="/signup"><i class="fa fa-registered"></i> Register Here</a></li>
-            <li class="lists">As a guest you can see the companies that have signed up to our platform.</li>
+            <li class="lists">As a guest you can see the Schools that have signed up to our platform.</li>
             
-            <li class="lists">After registration, you can register a company, rate and review other companies.</li>
+            <li class="lists">After registration, you can register a school, rate and review other schools.</li>
 
         </ul>
     </div>
@@ -30,7 +30,7 @@
            <div class="ul_links">
 	            <ul>
 	                <li><a href="/">Home</a></li> |
-	                <li><a href="/companies">All Companies</a></li>
+	                <li><a href="/companies">All Schools</a></li>
 	            </ul>
             </div>
             
@@ -45,7 +45,7 @@
             </div>
            
            <div class="bodyDiv">
-				<h4 style="">Companies</h4>
+				<h4 style="">Schools</h4>
 				
 				<% arrayAverage = function(arr) {
                     return _.reduce(arr, (num1, num2) => {
