--- a/views/company/company.ejs
+++ b/views/company/company.ejs
@@ -61,10 +61,29 @@
                     </div>
 
                     <div class="form-group ">
-                        <label for="">Sector</label>
+                        <label for="">Year Approved</label>
                         <span id="errorMsg5"></span>
                         <input id="sector" class="form-control" name="sector" type="text" style="margin-bottom:20px;">
                     </div>
+                    
+                    <div class="form-group">
+                    
+                                <label for="curriculum">School Curriculum:</label>
+
+                                <select name="curriculum" id="fees"><option value="" selected="selected">Select Your Curriculum</option><option value="American">American</option><option value="American Nigerian">American Nigerian</option><option value="British">British</option><option value="British American">British American</option><option value="British Nigerian">British Nigerian</option><option value="Nigerian">Nigerian</option><option value="Montessori">Montessori</option><option value="French">French</option><option value="Turkish">Turkish</option><option value="Canadian English">Canadian English</option><option value="Canadian Nigerian">Canadian Nigeria</option><option value="Saudi English">Saudi English</option><option value="Indian">Indian</option><option value="STEM">STEM</option><option value="Broadbased">Broadbased</option></select>
+
+                         
+                                                         <div class="clearfloat"></div>
+                        </div>
+                    
+                     <div class="form-group">
+                 <label for="website">School Facilities:</label>
+                 
+                            
+                            <div class="input select"><input type="hidden" name="facilities[_ids]" value=""><div class="checkbox"><label for="facilities-ids-10"><input type="checkbox" name="facilities[_ids][]" value="10" id="facilities-ids-10">Good Multipurpose hall</label></div><div class="checkbox"><label for="facilities-ids-11"><input type="checkbox" name="facilities[_ids][]" value="11" id="facilities-ids-11">Standard ICT Centre</label></div><div class="checkbox"><label for="facilities-ids-13"><input type="checkbox" name="facilities[_ids][]" value="13" id="facilities-ids-13">Sport Complex/Play Ground</label></div><div class="checkbox"><label for="facilities-ids-14"><input type="checkbox" name="facilities[_ids][]" value="14" id="facilities-ids-14">Good &amp; Standard Library</label></div><div class="checkbox"><label for="facilities-ids-15"><input type="checkbox" name="facilities[_ids][]" value="15" id="facilities-ids-15">Swimming Pool</label></div><div class="checkbox"><label for="facilities-ids-16"><input type="checkbox" name="facilities[_ids][]" value="16" id="facilities-ids-16">School Bus Service</label></div><div class="checkbox"><label for="facilities-ids-17"><input type="checkbox" name="facilities[_ids][]" value="17" id="facilities-ids-17">Good &amp; Standard Laboratory</label></div><div class="checkbox"><label for="facilities-ids-39"><input type="checkbox" name="facilities[_ids][]" value="39" id="facilities-ids-39">Zoological/Botanical Garden</label></div><div class="checkbox"><label for="facilities-ids-40"><input type="checkbox" name="facilities[_ids][]" value="40" id="facilities-ids-40">Sick Bay</label></div><div class="checkbox"><label for="facilities-ids-41"><input type="checkbox" name="facilities[_ids][]" value="41" id="facilities-ids-41">Interactive Whiteboard</label></div><div class="checkbox"><label for="facilities-ids-44"><input type="checkbox" name="facilities[_ids][]" value="44" id="facilities-ids-44">Children with Special needs</label></div><div class="checkbox"><label for="facilities-ids-47"><input type="checkbox" name="facilities[_ids][]" value="47" id="facilities-ids-47">Lunch Programme</label></div></div>                             
+                             <div class="clearfloat"></div>
+                </div>
+                    
 
                     <div class="form-group ">
                         <label for="">Website</label>
