--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
         </div>
 
         <ul class="sidebar-nav">
-           <img src="http://placehold.it/100x100" class="img-responsive img-circle profile_img" alt="">
+           <img src="images/logo.jpg" class="img-responsive img-circle profile_img" alt="">
             <div class="profile_info">
                 <span>Welcome,</span>
                 <h2>Guest</h2>
@@ -26,7 +26,8 @@
     <div id="page-content-wrapper">
        <% include partials/nav %>
         <div class="container-fluid main_body">
-           <h1>Welcome to RateMe</h1>
+            <img src=../public/images/logo.jpg>
+           <h1>Welcome to School Finder</h1>
            <div class="ul_links">
 	            <ul>
 	                <li><a href="/">Home</a></li> |
@@ -34,12 +35,17 @@
 	            </ul>
             </div>
             
+            <img src="images/page.jpg" width="1800px" height="500px" alt="">
+            
             <div class="container">
                 <div class="jumbotron">
-                    <h1 class="display-3 text-center"><b>Looking For The Best Schools?</b></h1>
+                    <h1 class="display-3 text-center"><b>How it Works?</b></h1>
                     <hr class="my-4">
                     <p class="text-center">Search and Review the Best Schools For your Child</p>
                     
+                    <div class="form-group">
+	                    <input type="submit" id="search" value="Search" class="form-control btn btn-primary">
+	                </div>
     
                 </div>
             </div>
