--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,6 +40,7 @@
                     <h1 class="display-3 text-center"><b>How it Works?</b></h1>
                     <hr class="my-4">
                     <p class="text-center">Search and Review the Best Schools For your Child</p>
+                    <li><a href="/company/search"><i class="fa fa-search"></i>School Search</a>
                     
                     <div class="form-group">
 	                    <input type="submit" id="search" value="Search" class="form-control btn btn-primary">
