--- a/views/company/company-profile.ejs
+++ b/views/company/company-profile.ejs
@@ -22,7 +22,7 @@
 	            <div class="row mainDiv">
 					<div class="innerDiv">
 						<div class="col-md-3" style="margin-bottom:30px;">
-							<img src="/images/<%= data.image %>" width="270px" height="270px" alt="">
+							<img src="/images/logo3.jpg" width="270px" height="270px" alt="">
 							<h3><%= data.name %></h3>
 							<i class="fa fa-map-marker "> <%= data.city %>, <%= data.country %></i><br>
 							<i class="fa fa-building-o "> <%= data.sector %></i><br>
@@ -30,7 +30,7 @@
 								http://<%= data.website %></a>
 							</i><br><br>
 							
-							<a href="/review/<%= data._id %>" class="btn btn-success">Rate this School/a><br><br>
+							<a href="/review/<%= data._id %>" class="btn btn-success">Rate this School</a><br><br>
 
 							<a href="/<%= data.name %>/employees" class="btn btn-info">View School Employees</a><br><br>
 
